syntax = "proto3";

option csharp_namespace = "GrpcServer";
option java_package = "app.grpc.hello";
option java_multiple_files = true;

package Greet;

service Greeter {
	rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
	string name = 1;
}


message HelloReply {
	string message = 1;
}